# picanha

./: .gitignore  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_PLAN.md  LICENSE  README.md  build.bat  ida_funcs.json  picanha.sln  picanha_funcs.txt  picanha_funcs2.txt  picanha_funcs3.txt  vcpkg.json
.claude/: settings.local.json
app/cli/: CMakeLists.txt
app/cli/src/: main.cpp
app/gui/: CMakeLists.txt
app/gui-qt/: CMakeLists.txt
app/gui-qt/src/: main.cpp
app/gui/src/: main.cpp
cmake/: CompilerFlags.cmake  Dependencies.cmake
engine/include/: iced.hpp  iced_internal.hpp  picanha_common.hpp
engine/src/: picanha.cpp
iced_x86/: decoder.hpp  encoder.hpp  instruction.hpp  instruction_info.hpp
iced_x86/internal/: constexpr_evex_tables.hpp
iced_x86/src/: decoder.cpp  fastfmt.cpp  gas_formatter.cpp  intel_formatter.cpp  masm_formatter.cpp  nasm_formatter.cpp
lib/analysis/: CMakeLists.txt
lib/analysis/include/picanha/analysis/: basic_block.hpp  cfg.hpp  cfg_builder.hpp  dag.hpp  function.hpp  function_detector.hpp  indirect_resolver.hpp  jump_table.hpp  pattern.hpp  pattern_matcher.hpp  switch_analyzer.hpp  symbol.hpp  symbol_table.hpp  xref.hpp  xref_manager.hpp
lib/analysis/src/: basic_block.cpp  cfg.cpp  cfg_builder.cpp  dag.cpp  function.cpp  function_detector.cpp  indirect_resolver.cpp  jump_table.cpp  pattern.cpp  pattern_matcher.cpp  switch_analyzer.cpp  symbol_table.cpp  xref_manager.cpp
lib/core/: CMakeLists.txt
lib/core/include/picanha/: core.hpp
lib/core/include/picanha/core/: arena.hpp  bitflags.hpp  hash.hpp  instruction.hpp  parallel.hpp  result.hpp  span.hpp  types.hpp
lib/core/src/: arena.cpp  hash.cpp
lib/database/: CMakeLists.txt
lib/database/src/: stub.cpp
lib/disasm/: CMakeLists.txt
lib/disasm/include/picanha/disasm/: decoder.hpp  disassembly_context.hpp  flow_analyzer.hpp  instruction_info.hpp  recursive_descent.hpp  work_queue.hpp
lib/disasm/src/: decoder.cpp  disassembly_context.cpp  flow_analyzer.cpp  recursive_descent.cpp  stub.cpp  work_queue.cpp
lib/lift/: CMakeLists.txt
lib/lift/include/picanha/lift/: decompilation_service.hpp  export_lift_service.hpp  ir_optimizer.hpp  lifted_function.hpp  lifting_context.hpp  lifting_service.hpp  trace_manager_impl.hpp  types.hpp
lib/lift/src/: decompilation_service.cpp  export_lift_service.cpp  ir_optimizer.cpp  lifted_function.cpp  lifting_context.cpp  lifting_service.cpp  trace_manager_impl.cpp
lib/loader/: CMakeLists.txt
lib/loader/include/picanha/loader/: binary.hpp  memory_map.hpp
lib/loader/include/picanha/loader/pe/: pe_exceptions.hpp  pe_exports.hpp  pe_imports.hpp  pe_parser.hpp  pe_relocations.hpp  pe_sections.hpp  pe_types.hpp
lib/loader/src/: binary.cpp  memory_map.cpp  pe_exceptions.cpp  pe_exports.cpp  pe_imports.cpp  pe_parser.cpp  pe_relocations.cpp  pe_sections.cpp  stub.cpp
lib/persistence/: CMakeLists.txt
lib/persistence/include/picanha/persistence/: database.hpp  project.hpp  schema.hpp
lib/persistence/src/: database.cpp  project.cpp
lib/plugin/: CMakeLists.txt
lib/plugin/include/picanha/plugin/: function_pass.hpp  plugin.hpp  plugin_manager.hpp
lib/plugin/src/: plugin_manager.cpp  stub.cpp
lib/ui/: CMakeLists.txt
lib/ui-qt/: CMakeLists.txt
lib/ui-qt/include/picanha/ui-qt/: decompiled_widget.hpp  disasm_widget.hpp  function_list_widget.hpp  hex_widget.hpp  imports_widget.hpp  ir_widget.hpp  log_widget.hpp  main_window.hpp  optimized_widget.hpp  symbol_list_widget.hpp  syntax_highlighter.hpp  xref_list_widget.hpp
lib/ui-qt/src/: decompiled_widget.cpp  disasm_widget.cpp  function_list_widget.cpp  hex_widget.cpp  imports_widget.cpp  ir_widget.cpp  log_widget.cpp  main_window.cpp  optimized_widget.cpp  symbol_list_widget.cpp  syntax_highlighter.cpp  xref_list_widget.cpp
lib/ui/include/picanha/ui/: app.hpp  decompiled_view.hpp  disasm_view.hpp  function_list.hpp  hex_view.hpp  imports_view.hpp  ir_view.hpp  optimized_view.hpp  symbol_list.hpp  xref_list.hpp
lib/ui/src/: app.cpp  decompiled_view.cpp  disasm_view.cpp  function_list.cpp  hex_view.cpp  imports_view.cpp  ir_view.cpp  optimized_view.cpp  symbol_list.cpp  xref_list.cpp
picanha-cmd/: picanha-cmd.vcxproj  picanha-cmd.vcxproj.filters
picanha-ng/: picanha-ng.vcxproj
plugin-parser-windows-x64/: dllmain.cpp  plugin-parser-windows-x64.vcxproj
plugins/: CMakeLists.txt
plugins/example_pass/: CMakeLists.txt  example_pass.cpp
plugins/signature_match/: CMakeLists.txt  signature_match.cpp
tests/: CMakeLists.txt
tests/analysis/: CMakeLists.txt  test_cfg.cpp
tests/core/: CMakeLists.txt  test_types.cpp
tests/disasm/: CMakeLists.txt  test_decoder.cpp
